2000-04-20  Michael Natterer  <mitch@gimp.org>

	* gimprc.in
	* app/gimprc.c: default to restore_session == TRUE so first time
	users really see the automatically opened dialogs.

	* app/session.[ch]: also open "Tool Options" if no sessionrc
	exists. Moved the harcoded initial positions away from the top and
	left edges of the screen to avoid dialogs which appear underneath
	panels. Also arranged the four default dialogs non-overlapping.

2000-04-20  Michael Natterer  <mitch@gimp.org>

	* app/fuzzy_select.c
	* app/selection_options.h
	* app/tool_options.c: moved the "Threshold" scale from the fuzzy
	select options to the selection options structure, so none of the
	selection tools needs it's own tools options structure.

	* app/bucket_fill.c: moved "Threshold" after "Sample Merged" as in
	the fuzzy select options.

2000-04-20  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpfileselection.[ch]: using the GimpPixmap here was a
	bad idea because showing/hiding the pixmap widgets is no solution
	(somebody may call gtk_widget_show_all() and we suddenly see both
	pixmaps, eek).
	Reverted it to use GtkPixmap and gtk_pixmap_set().

2000-04-20  Jens Lautenbacher  <jtl@schlund.de>

	* plug-ins/common/bumpmap.c (bumpmap_dialog): restrict scale for
	waterlevel/ambient to 255. Bumped version number to 3.0-pre1-ac2
	
2000-04-20  Nick Lamb  <njl195@zepler.org.uk>

	* plug-ins/common/tiff.c: libtiff has swerved to avoid the LZW
	patent, hence we must also take action. Gimp's TIFF output
	is now ..._NONE by default, DEFLATE and JPEG are new options,
	and LZW is still listed but on e.g. RH6.2 it will not work.

2000-04-19  Michael Natterer  <mitch@gimp.org>

	* app/bucket_fill.c
	* app/by_color_select.c
	* app/fuzzy_select.c
	* app/preferences_dialog.c: made the "default_threshold" gimprc
	variable work as advertized:

	- initialize the thresholds with it.
	- use it for "Reset".
	- added a widget to the "Tool Options" preferences page.