@@ -1,3 +1,7 @@
+2000-04-20  Sven Neumann  <sven@gimp.org>
+
+	* de.po: updated german translation
+
 2000-04-19  Sven Neumann  <sven@gimp.org>
 
 	* de.po: updated german translation
